# External_Scan_Insitu_Test

./: .gitignore  CMakeLists.txt  ExternalScan.h  MachineTalkControl.hpp  README.md  ScanControl.h  alignment.hpp  main.cpp  tif.hpp
aux_build_seperate/: InSituWithExternalScan_SnakeRaster_20180425.xrml  InSituWithExternalScan_SnakeRaster_20180425_for_1500_calibration.xrml
aux_build_seperate/DetectFrequency/: CMakeLists.txt  MachineTalkControl.hpp  main.cpp
aux_build_seperate/DetectFrequency/fftw/: libfftw3f-3.lib  libfftw3l-3.lib
aux_build_seperate/MakeBeepSound/: CMakeLists.txt  main.cpp
aux_build_seperate/TurnExtOnOff/: CMakeLists.txt  main.cpp
fftw/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3l-3.exp
